syntax = "proto3";

package bnet;

option java_package = "net.bestia.bnet.proto";
option java_outer_classname = "InventoryCmsgProto";

/**
 * Returns the inventory content of the currently selected entity/bestia.
 * TODO turn this into a component message as inventory items are now handled via a component.
 */
message InventorySMSG {
  uint64 entity_id = 1;
  repeated PlayerItem items = 2;
}

message PlayerItem {
  uint32 item_id = 1;
  uint64 player_item_id = 2;
  uint32 amount = 3;
}